# Agno-Deep-Agents

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agno_deep_agents/: __init__.py  acp_server.py  cli.py  deep_agent.py
docs/: _config.yml  acp-editors.md  architecture.md  cli.md  getting-started.md  github-pages.md  index.md  models.md  protocols.md  python-api.md  roadmap.md  skills.md  troubleshooting.md
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/assets/js/: theme.js
examples/: ollama_deep_agent.py
skills/codebase-analysis/: SKILL.md
skills/deep-agent-planning/: SKILL.md
skills/elixir-programming/agents/: openai.yaml
skills/go-programming/agents/: openai.yaml
skills/node-programming/agents/: openai.yaml
skills/python-programming/agents/: openai.yaml
skills/rust-programming/agents/: openai.yaml
skills/social-video-captions/scripts/: process_video_for_social.py
